Chapter05/5.5.4 pod-fqdn-hostname.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp1
  labels:
    app: webapp1
spec:
  setHostnameAsFQDN: true
  hostname: webapp-1
  subdomain: mysubdomain
  containers:
  - name: webapp1
    image: kubeguide/tomcat-app:v1
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
