Chapter05/5.2.6 headless-service-without-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
  - protocol: TCP
    port: 80
  clusterIP: None

---
apiVersion: v1
kind: Endpoints
metadata:
  name: webapp
subsets:
- addresses:
  - ip: 192.168.18.3
  ports:
  - port: 80
