Chapter05/5.2.7 service-externalip.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  externalIPs:
  - 192.168.18.100
