Chapter05/5.2.8 service-appprotocol.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
  - port: 8080
    targetPort: 8080
    appProtocol: HTTP
  selector:
    app: webapp
