Chapter05/5.5.3 pod-hostname-subdomain.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp1
  labels:
    app: webapp1
spec:
  hostname: webapp-1
  subdomain: mysubdomain
  containers:
  - name: webapp1
    image: kubeguide/tomcat-app:v1
    ports:
    - containerPort: 8080


# headless-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysubdomain
spec:
  selector:
    app: webapp
  clusterIP: None
  ports:
  - port: 8080


# endpointslice
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: example-abc
  labels:
    kubernetes.io/service-name: example
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.1.2.3"
    conditions:
      ready: true
    hostname: pod-1
    nodeName: node-1
    zone: us-west2-a
