Chapter05/5.7.3 service-dualstack-ips.yaml
# svc-webapp-ipv4.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
    - port: 8080
  selector:
    app: webapp


# svc-webapp-ipv6.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-ipv6
spec:
  ipFamilies:
  - IPv6
  ports:
    - port: 8080
  selector:
    app: webapp


# svc-webapp-ipv6-ipv4.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-ipv6-ipv4
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv6
  - IPv4
  ports:
    - port: 8080
  selector:
    app: webapp
